[package]
name = "rpi_sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.14.1", features = ["hal"] }
dht11 = { git = "https://github.com/hitohata/DHT11.git" }
tokio = { version = "1", features = ["time"] }
led_light = { path="./libs/led_light" }
